--- a/devops.html
+++ b/devops.html
@@ -38,11 +38,31 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oas49fwz&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nC88mMwv'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n998mMw3'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374645-cloud-administrator-devops-ubisoft-cloud-'>Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374583-administrateur-cloud-devops-cloud-ubisoft-'>Ubisoft Administrateur Cloud (Devops - Cloud Ubisoft) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698373991-team-lead-infrastructure-operations-cicd-devops-'>Ubisoft Team Lead (Infrastructure/Operations/CICD/DevOps) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999698370199-senior-consultant-devops-architect'>SMARTWAVE Senior Consultant  - DevOps Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1920225'>Job Application for Sr. DevOps Engineer at Recursion Pharmaceuticals</a></h5> 
+<h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1920225'>Job Application for Sr. DevOps Engineer at Recursion Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -140,7 +160,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -180,7 +200,7 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -192,7 +212,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=os4ibfwJ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nGKIlMwK'>Guidewire Software, Inc. Careers - Cloud DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=os4ibfwJ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nGKIlMwK'>Guidewire Software, Inc. Careers - Cloud DevOps</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -200,7 +220,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698252976-administrateur-devops-h-f'>Linkbynet Administrateur Devops H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -224,7 +244,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueScope/743999698244558-devops-developer-port-kembla-or-mascot-nsw'>BlueScope DevOps Developer, Port Kembla or Mascot NSW | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlueScope/743999698244558-devops-developer-port-kembla-or-mascot-nsw'>BlueScope DevOps Developer, Port Kembla or Mascot NSW | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia  Australia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -395,7 +415,7 @@ of?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=ne3glMw9'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=ne3glMw9'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -415,7 +435,7 @@ of?...</p>
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -423,7 +443,7 @@ of?...</p>
 <p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://portbase.recruitee.com/o/devops-engineer-sre'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://portbase.recruitee.com/o/devops-engineer-sre'>
       DevOps Engineer / SRE - Portbase
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -433,27 +453,6 @@ of?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>3 ??. ???? ... Built with open source technologies, our systems handle billions of records daily, 
 generating terabytes of data. The DevOps Engineer will be responsible for all?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931915'>Job Application for Technical Senior Engineering Manager, DevOps ...</a></h5> 
-<p><span class="badge badge-light">Boston</span></p>
-<p>2 days ago ... We are 100% in the cloud, use containers and up-to-date technologies, and 
-strive for the best build and deploy experience that we can offer our developer?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/levio/jobs/4494272002'>Job Application for Int?grateur DevOps senior at Levio</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698128642-devops-ingenieur-in-cloud-services'>Bosch Group DevOps Ingenieur*in Cloud Services | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698128260-devops-engineer-bosch-iot-cloud-services'>Bosch Group DevOps Engineer Bosch IoT Cloud Services | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oFxQafwW&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nyxdkMwT'>Infoblox Careers - Cloud DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">Burnaby</span></p>
-<p>Posted on:: 2019-10-25</p>
 <hr/>
 
 
