--- a/product-manager.html
+++ b/product-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698375427-senior-product-manager-growth-m-f-d-'>Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/trademe/job/o2rrbfwP'>Trade Me Careers - Product Manager - Senior</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New Zealand  New Zealand</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698374989-senior-product-manager-flights-air-m-f-d-'>Omio Senior Product Manager Flights/Air (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698364962-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -126,7 +130,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-designer-11/'>Senior Product Designer | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -216,7 +220,7 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
+<h5><a href='https://www.invokegeek.com/jobs/product-manager-adobe-com/'>Product Manager ? Adobe.com ? invokeGeek</a></h5> 
 <p><span class="badge badge-light">United States  San Jose, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -413,7 +417,7 @@
 <p>Oct 13, 2019 ... Attracting top talent through an inclusive culture of freedom and responsibility;; 
 Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/ocBnbfw5'>SugarCRM Careers - Senior Product Manager, Cloud Platform</a></h5> 
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -443,7 +447,7 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698275796-marketing-technology-product-manager'>Traveloka Marketing Technology Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -454,10 +458,6 @@ Pushing the boundaries of what's possible in advanced machine learning?...</p>
 <h5><a href='https://www.titania.com/about-us/careers/product-owner/?utm_content=104199218&utm_medium=social&utm_source=twitter&hss_channel=tw-508940978'>Product Owner - Titania</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698274435--senior-product-manager-in-cloud-security-solutions'>Bosch Group (Senior) Product Manager*in ? Cloud Security Solutions | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
